lab-applications/dns-pihole/overlays/dns-pihole-2/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dns-pihole-2
spec:
  selector:
    matchLabels:
      app: dns-pihole-2
  replicas: 1
  template:
    metadata:
      labels:
        app: dns-pihole-2
    spec:
      containers:
        - name: dns-pihole-2
          securityContext:
            capabilities:
              add:
                - CHOWN
                - NET_BIND_SERVICE
                - NET_ADMIN
                - SETFCAP
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
            requests:
              cpu: 250m
              memory: 512Mi
          image: docker.io/pihole/pihole:latest
          ports:
            - containerPort: 53
            - containerPort: 80
