lab-applications/dns-pihole/overlays/dns-pihole-2/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-pihole-2
  labels:
    app: dns-pihole-2
    service: dns-pihole
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - pihole-2.apps.k8s.kemo.labs
  rules:
  - host: pihole-2.apps.k8s.kemo.labs
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: dns-pihole-2-web
            port:
              number: 80
